header safari fix, meta spacing fix

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,4 +1,26 @@
+		body.header-bg .header__wrapper {
+			background: rgba(255,255,255,1);
+		}
 		
+		.header__wrapper {
+			padding: 0 10px;
+			display: flex;
+			align-items: center;
+			height: 60px;
+
+			@include phone-wide-min {
+			  padding: 0 20px;
+			}
+			
+
+			@include desktop-sm-min {
+				text-align: center;
+				padding: 0 40px;
+				height: 80px;
+			}
+
+
+		}
 		
 		.header__logo {
 			width: 180px;
@@ -100,11 +122,8 @@
 			left: 0;
 			width: 100%;
 			height: 60px;
-			background: transparent;
 			z-index: 10;
-			padding: 0 10px;
-			display: flex;
-			align-items: center;
+			background-color: rgba(255,255,255,0);
 
 			&::before {
 				/* never visible - used in JS to check mq */
@@ -115,15 +134,6 @@
 					content: 'desktop';
 				}
 			}
-
-			&.header-bg {
-				background: $color-2;
-			}
-
-			// &.nav-open {
-			// 		height: 100%;
-			// 		overflow: scroll;
-			// }
 
 			.mobile-demo {
 				background: $websites-2;
@@ -145,18 +155,12 @@
 				padding-left: 0;
 			}
 
-			@include phone-wide-min {
-			  padding: 0 20px;
-			}
-			
-
 			@include desktop-sm-min {
 				height: 80px;
 				left: 0;
 				top: 0;
 				width: 100%;
 				text-align: center;
-				padding: 0 40px;
 
 				.mobile-demo {
 					display: none;
