--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -9,8 +9,7 @@ body {
 	position: relative;
 	right: 0;
 	top: 0;
-	transition: right 1s;
-	background: $color-2;
+	background-color: rgba(255,255,255,1);
 	z-index: 1;
 
 	@include tablet-wide-min {
@@ -24,7 +23,7 @@ body {
 }
 
 main {
-	background: $color-2;
+	background-color: rgba(255,255,255,1);
 }
 
 h1,
